--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>〇〇〇〇のページです。</div>
+    <div>旧札のページです。</div>
   </div>
   <div class=main>
     <div>
       <h2>特徴・特技</h2>
       <div>
-        新しいものが好き、水泳
+        数学が好き、新しいものも好き。キャップ投げ。
       </div>
     </div>
 
     <div>
       <h2>趣味・嗜好</h2>
       <div>
-        毎朝のYouTube
+        複素関数論
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年6月25日
   </div>
 </body>
 </html>
