--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>旧札のページです。</div>
+    <div>旧札のページだよ。</div>
   </div>
   <div class=main>
     <div>
