--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>旧札のページだよ。</div>
+    <div>あなたの個人情報は抜き取られました。</div>
   </div>
   <div class=main>
     <div>
-      <h2>特徴・特技</h2>
+      <h2>だめだよね？</h2>
       <div>
-        数学が好き、新しいものも好き。キャップ投げ。
+        ネットリテラシーしっかりしないと。ネットリテラシーしっかりしないと。ネットリテラシーしっかりしないと
       </div>
     </div>
 
     <div>
-      <h2>趣味・嗜好</h2>
+      <h2>そんなんじゃ今後やっていけないよ？</h2>
       <div>
-        複素関数論
+        高専生として恥ずかしくないの？
       </div>
     </div>
   </div>
