--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>あなたの個人情報は抜き取られました。</div>
+    <div>旧札のページでっせ</div>
   </div>
   <div class=main>
     <div>
-      <h2>だめだよね？</h2>
+      <h2>特徴・特技</h2>
       <div>
-        ネットリテラシーしっかりしないと。ネットリテラシーしっかりしないと。ネットリテラシーしっかりしないと
+        キャップ投げが好き。
       </div>
     </div>
 
     <div>
-      <h2>そんなんじゃ今後やっていけないよ？</h2>
+      <h2>趣味・嗜好</h2>
       <div>
-        高専生として恥ずかしくないの？
+        複素関数論
       </div>
     </div>
   </div>
