--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>2a班11番 柴原柚吉</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,11 +31,13 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチを用いて猫を移動させて、移動出させた道に色を付ける設定にした。<br>
+        その移動できる道を設定して独自の絵にしていった<br>
+        みんないずれも一歩進んで回転して円を作っていた<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        僕は以前、スクラッチをして遊んでいた経験があったが、<br>
+        久々の利用だったため忘れていたところもあり、初心に帰って学ぶことができた。<br>
+        <br>
       </div>
     </div>
 
@@ -44,11 +46,11 @@
       <img src="game.png" alt="りんごチャッチゲームの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチを用いて落下物をキャッチさせるゲームを作った。<br>
+        絵を描く時よりも自由度が高く、おのおのでオリジナリティが出ていた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        やっている内容はとてもシンプルであったが、まだ使ったことのない機能があると知ったので、新鮮味を感じた。<br>
+        見たところ、まだまだ知らないところがあったので個人の活動でも使ってみたいと思った。<br>
       </div>
     </div>
 
@@ -58,11 +60,12 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://yourID.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        Githubを用いて軽い自己紹介のホームページを作った<br>
+        Githubにあるテンプレートのものを編集して自己紹介ホームページを作った<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        始める前は自分がホームページを作れるわけないだろうと思っていたが、<br>
+        手順通りとはいえ、作業をしたら作れたので、とても達成感があり、楽しかった。<br>
+        今後プログラミングをするきっかけになったと思う。<br>
       </div>
     </div>
 
@@ -70,15 +73,15 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年7月1日
   </div>
 </body>
 </html>
