--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>2a班11番 柴原柚吉</div>
+    <div>2a班11番 諭吉</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -73,9 +73,9 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://sibahara-yukichi.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://sibahara-yukichi.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://sibahara-yukichi.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://rv25068r.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://rv25068r.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://rv25068r.github.io/web/rep03.html">3週目のレポート</a><br>
         <a href="https://sibahara-yukichi.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
