--- a/rep01.html
+++ b/rep01.html
@@ -58,7 +58,7 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://sibahra-yukichi.github.io/web/">私のホームページ</a><br>
         1.内容<br>
         Githubを用いて軽い自己紹介のホームページを作った<br>
         Githubにあるテンプレートのものを編集して自己紹介ホームページを作った<br>
@@ -73,9 +73,9 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://rv25068r.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://rv25068r.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://rv25068r.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/rep03.html">3週目のレポート</a><br>
         <a href="https://sibahara-yukichi.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
