--- a/rep01.html
+++ b/rep01.html
@@ -58,7 +58,7 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://sibahra-yukichi.github.io/web/">私のホームページ</a><br>
+        <a href="https://sibahara-yukichi.github.io/web/">私のホームページ</a><br>
         1.内容<br>
         Githubを用いて軽い自己紹介のホームページを作った<br>
         Githubにあるテンプレートのものを編集して自己紹介ホームページを作った<br>
