--- a/rep02.html
+++ b/rep02.html
@@ -44,11 +44,11 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        機械学習の学習の一環でじゃんけんゲームをつくった<br>
+        カメラ機能を使って自分がいま出している手の形を判別できるようにした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        このような形式のゲームの作り方を知らず、<br>
+        気になっていたが、今回の授業で作り方を知り、長年の謎が解けてすっきりした。<br>
       </div>
     </div>
 
@@ -57,18 +57,17 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VRゴーグルを用いてヴァーチャル空間の移動などを体験した<br>
+        ヴァーチャル空間内では、自然のようなものの中や、公大高専寝屋川キャンパスなどがあった。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VRゴーグルを用いての移動・操作は初めてだったので、とても新鮮で楽しかった。<br>
+        大阪公立大学工業高等専門学校寝屋川キャンパスの再現度も高く、自分でも作りたいと思った。」<br>
       </div>
     </div>
 
     <div>
       <h3>各ページへのリンク</h3>
       <div>
-        <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sibahara-yukichi.github.io/web/rep01.html">1週目のレポート</a><br>
         <a href="https://sibahara-yukichi.github.io/web/rep02.html">2週目のレポート</a><br>
         <a href="https://sibahara-yukichi.github.io/web/rep03.html">3週目のレポート</a><br>
@@ -77,7 +76,7 @@
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年7月2日
   </div>
 </body>
 </html>
