--- a/rep02.html
+++ b/rep02.html
@@ -30,7 +30,7 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        <br>
+        HTMLを用いて第一週のレポートを書く。<br>
         <br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
