--- a/rep03.html
+++ b/rep03.html
@@ -44,8 +44,8 @@
       <a href="https://sibahara-yukichi.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        プログラミングアプリを用いて伝言アプリを作った<br>
+        <br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
@@ -57,11 +57,11 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VRゴーグルを用いてプログラムの三次元空間を体験した<br>
+        <br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        <br>
+        <br>
       </div>
     </div>
 
