--- a/rep03.html
+++ b/rep03.html
@@ -31,11 +31,11 @@
       <a href="https://sibahara-yukichi.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
-        <br>
-        <br>
+        javascriptを用いてvr空間を各々で作った。<br>
+        物体を増やしたり物体の色を変えたりしてオリジナリティを出していた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        人生初めてのjavascriptの使用だったためとてもワクワクした。<br>
+        最初見たときは何を書いているのかわからなかったが、最終的には自分で打ち込めるほどになれた。<br>
       </div>
     </div>
     <div>
@@ -45,10 +45,10 @@
       <div>
         1.内容<br>
         プログラミングアプリを用いて伝言アプリを作った<br>
-        <br>
+        渡された冊子を用いて各々のできるところまで進んだ。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        <br>
+        <br>
       </div>
     </div>
 
@@ -58,10 +58,10 @@
       <div>
         1.内容<br>
         VRゴーグルを用いてプログラムの三次元空間を体験した<br>
-        <br>
+        各々の思うままに動かしてプログラムの三次元空間を体験した。<br>
         2.感想<br>
-        <br>
-        <br>
+        白玉を投げれてとても楽しかった。<br>
+        限られた空間でできることを考えて三次元空間を体験した。<br>
       </div>
     </div>
 
