--- a/rep02.html
+++ b/rep02.html
@@ -31,10 +31,10 @@
       <div>
         1.内容<br>
         HTMLを用いて第一週のレポートを書く。<br>
-        <br>
+        通常とは違う形式でレポートを書く。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        いつもとは違う形式でのレポートだったので、最初は戸惑いましたが、<br>
+        後半からは慣れて、とても新鮮な気持ちでレポートが欠けて楽しかったです。<br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
