--- a/rep03.html
+++ b/rep03.html
@@ -47,8 +47,8 @@
         プログラミングアプリを用いて伝言アプリを作った<br>
         渡された冊子を用いて各々のできるところまで進んだ。<br>
         2.感想<br>
-        <br>
-        <br>
+        似たような有名なサイトがありますが、あれの簡易版を作ったような感じがしました。<br>
+        もう一度あのプログラムを作ってもっと便利にしたいです。<br>
       </div>
     </div>
 
